Add index page countdown div

--- a/front/index.html
+++ b/front/index.html
@@ -32,6 +32,7 @@
 				<div class="col-sm-12 col-md-12 col-lg-12">
 					<h1>CodingCat</h1>
 					<h2 class="subtitle">We're working hard to improve our website and we'll ready to launch after</h2>
+          <div id="countdown"></div>
         </div>
 			</div>
 			<div class="row">
