--- a/front/index.html
+++ b/front/index.html
@@ -42,7 +42,7 @@
 		</div>
 	</div>
   </div>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/js/jquery-1.10.2.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/jquery.countdown.min.js"></script>
 	<script type="text/javascript">
