--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>index</title>
     <link rel="stylesheet" href="/dist/element-ui/lib/theme-default/index.css">
-    <link rel="stylesheet" href="/dist/assets/css/main.css">
+    <link rel="stylesheet" href="/dist/assets/css/index.css">
   </head>
   <body>
     <div id="app"></div>
