--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
     <title>index</title>
     <link rel="stylesheet" href="/dist/element-ui/lib/theme-default/index.css">
     <link rel="stylesheet" href="/dist/assets/css/index.css">
+    <link rel="stylesheet" href="/dist/assets/css/font-awesome.min.css">
   </head>
   <body>
     <div id="app"></div>
