--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>index</title>
+    <title>codingcat</title>
     <link rel="stylesheet" href="/dist/element-ui/lib/theme-default/index.css">
     <link rel="stylesheet" href="/dist/assets/css/index.css">
     <link rel="stylesheet" href="/dist/assets/css/font-awesome.min.css">
